--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ extension/.idea/inspectionProfiles/profiles_settings.xml
 extension/.idea/misc.xml
 extension/.idea/modules.xml
 extension/h.pdf
+theModelWeights
